<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/gradient"
  android:gravity="center|top"
  android:orientation="vertical"
  tools:context="ui.LoginActivity">

  <ImageView
    android:layout_width="250dp"
    android:layout_height="243dp"
    android:padding="40dp"
    android:src="@drawable/connectfm_logo" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="65dp"
    android:padding="30dp"
    android:orientation="vertical">

    <Button
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:background="@drawable/create_account_normal"
      android:text="@string/create_account"
      android:textColor="#ffffff" />

    <Button
      android:id="@+id/login_button"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:background="@drawable/round_rect"
      android:backgroundTint="#ffffff"
      android:text="@string/login_button" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="20dp"
      android:layout_marginTop="15dp"
      android:layout_marginBottom="5dp"
      android:gravity="center"
      android:text="@string/already_user"
      android:textColor="#ffffff"
      android:textSize="12sp" />

  </LinearLayout>

  <TextView
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:gravity="center"
    android:text="@string/welcome_text"
    android:textColor="@color/colorLoginPressed"
    android:textSize="13sp" />

  <TextView
    android:textStyle="bold"
    android:layout_width="200dp"
    android:layout_height="20dp"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:text="@string/welcome"
    android:textColor="#ffffff"
    android:textSize="15sp" />
</LinearLayout>
